code/bwz/error.txt
  File "test123.py", line 1
    !#D:/python3.7/python
    ^
SyntaxError: invalid syntax
